# sba

./: CMakeLists.txt  Makefile  README.md
analysis/: jump_table.cpp
lift/: Makefile  atest  commtest  itest  learn.ml  learn.mli  lexAsm.mll  lexRtl.mll  main.ml  parseARM.mly  parseATT.mly  parseAVR.mly  parseITC.mly  parseRtl.mly  sa.ml  x86_64.tar.xz
lift/dataset/: manual.imap
obsolete/: CHANGELOG.md  log.txt
sba/: arch.cpp  arch.h  arithmetic.cpp  arithmetic.h  binary.cpp  binary.h  block.cpp  block.h  common.cpp  common.h  config.h  config_unicstr.h  default.h  domain.cpp  domain.h  domain_vsa.cpp  eval.h  expr.cpp  expr.h  framework.cpp  framework.h  function.cpp  function.h  insn.cpp  insn.h  libanalysis.cpp  macro.h  parser.cpp  parser.h  program.cpp  program.h  rtl.cpp  rtl.h  scc.cpp  scc.h  state.cpp  state.h  system.cpp  system.h  type.cpp  (+2 more)
test/: test.cpp  test_full.cpp  test_func.cpp  test_jtable.cpp  test_stack.cpp  test_type.cpp
